Added Login markup

--- a/myawards/templates/myawards/auth/signup.html
+++ b/myawards/templates/myawards/auth/signup.html
@@ -1,4 +1,41 @@
-{% extends "myawards/base.html" %} {% block content %}
-<h1> RENDER WHEN I TELL YOU RENDER!!! </h1>
+<!-- @format -->
 
+{% extends "myawards/base.html" %} {% block content %}
+<div
+	class="container col-md-4 col-lg-3 d-flex flex-column justify-items-center"
+>
+	<img
+		class="img-fluid w-75 p-3 mx-auto my-2"
+		src="https://freepikpsd.com/file/2019/10/font-instagram-png-5-Transparent-Images.png"
+		width=""
+		alt=""
+		class="d-inline-block align-text-top"
+	/>
+
+	<div class="container-fluid d-flex flex-column justify-items-center">
+		<div class="btn btn-primary"
+			><span><i class="bi bi-facebook"></i></span> Login with facebook</div
+		>
+		<form method="POST">
+			{% csrf_token %}
+			<fieldset class="form-group">
+				<legend class="border-bottom mb-4 text-center">Sign up</legend>
+				{{ form | crispy}}
+			</fieldset>
+			<div class="form-group container d-flex justify-items-center">
+				<button
+					class="mx-auto px-3 btn btn-block btn-primary mx-auto"
+					type="submit"
+					>Sign Up</button
+				>
+			</div>
+		</form>
+		<div class="border-top pt-3 text-center">
+			<small class="text-muted mx-auto">
+				Already Have An Account?
+				<a class="ml-2" href="{% url 'login' %}">Sign In</a>
+			</small>
+		</div>
+	</div>
+</div>
 {% endblock content %}
