--- a/myawards/templates/myawards/base.html
+++ b/myawards/templates/myawards/base.html
@@ -21,7 +21,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		{% include 'myawards/navbar.html' %} {% block content %} {% endblock content %}
+		{% include 'myawards/navbar.html' %} {% block content %} {% endblock content
+		%}
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 			integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -32,5 +33,8 @@
 			integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
 			crossorigin="anonymous"
 		></script>
+		{% block scripts %} {{block.super}}
+		<script type="text/javascript" src="{%static 'scripts/main.js'%}"></script>
+		{% endblock %}
 	</body>
 </html>
