--- a/myawards/templates/myawards/base.html
+++ b/myawards/templates/myawards/base.html
@@ -1,6 +1,5 @@
 <!-- @format -->
 
-<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -21,8 +20,27 @@
 		<title>Document</title>
 	</head>
 	<body>
-		{% include 'myawards/navbar.html' %} {% block content %} {% endblock content
-		%}
+		{% include 'myawards/navbar.html' %} {% block content %} {% endblock content%}
+		<footer class="py-3 my-4">
+			<ul class="nav justify-content-center border-bottom pb-3 mb-3">
+				<li class="nav-item"
+					><a href="#" class="nav-link px-2 text-muted">Home</a></li
+				>
+				<li class="nav-item"
+					><a href="#" class="nav-link px-2 text-muted">Features</a></li
+				>
+				<li class="nav-item"
+					><a href="#" class="nav-link px-2 text-muted">Pricing</a></li
+				>
+				<li class="nav-item"
+					><a href="#" class="nav-link px-2 text-muted">FAQs</a></li
+				>
+				<li class="nav-item"
+					><a href="#" class="nav-link px-2 text-muted">About</a></li
+				>
+			</ul>
+			<p class="text-center text-muted">© 2021 Company, Inc</p>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 			integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -33,8 +51,5 @@
 			integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
 			crossorigin="anonymous"
 		></script>
-		{% block scripts %} {{block.super}}
-		<script type="text/javascript" src="{%static 'scripts/main.js'%}"></script>
-		{% endblock %}
 	</body>
 </html>
