--- a/myawards/templates/myawards/navbar.html
+++ b/myawards/templates/myawards/navbar.html
@@ -9,53 +9,116 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#"></a>
-					<!-- <img
-						src="https://www.freepnglogos.com/uploads/a-logo-4.png"
-						width="200"
-						alt="A with 1 logo png"
-					/> -->
-					<h1>Webwwards</h1> </a
+		<header
+			class="p-3  text-white"
+			style="
+				background: #c33764; /* fallback for old browsers */
+				background: -webkit-linear-gradient(
+					to right,
+					#1d2671,
+					#c33764
+				); /* Chrome 10-25, Safari 5.1-6 */
+				background: linear-gradient(
+					to right,
+					#1d2671,
+					#c33764
+				); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+			"
+		>
+			<div class="container">
+				<div
+					class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
 				>
+					<a
+						href="/"
+						class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
+					>
+						<svg
+							class="bi me-2"
+							width="40"
+							height="32"
+							role="img"
+							aria-label="Bootstrap"
+						>
+							<use xlink:href="#bootstrap"></use>
+						</svg>
+					</a>
 
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarNav"
-					aria-controls="navbarNav"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Features</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">
-                                        <button class="btn btn-info">
-                                             Sign In
-                                        </button>
-                                   </a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link ">
-                                        <button class="btn btn-warning">
-                                             Sign Up
-                                        </button>
-                                   </a>
-						</li>
+					<ul
+						class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+					>
+						<li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+						<li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+						<li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+						<li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+						<li><a href="#" class="nav-link px-2 text-white">About</a></li>
 					</ul>
+
+					<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+						<input
+							type="search"
+							class="form-control form-control-dark"
+							placeholder="Search..."
+							aria-label="Search"
+						/>
+					</form>
+
+					<div class="text-end">
+						{% if user.is_authenticated %}
+						<a href="{% url 'project_create'%}">
+							<button type="button" class="btn btn-outline-light me-2"
+								>Submit a Project</button
+							>
+						</a>
+						<button type="button" class="btn btn-warning">Logout</button>
+						{% else %}
+						<button type="button" class="btn btn-outline-light me-2"
+							>Login</button
+						>
+						<button type="button" class="btn btn-warning">Sign-up</button>
+						{% endif %}
+					</div>
 				</div>
 			</div>
-		</nav>
+		</header>
+		<header class="site-header">
+			<!-- <nav
+				class="navbar navbar-expand-md navbar-dark bg-steel fixed-top text-dark"
+			>
+				<div class="container">
+					<a class="navbar-brand mr-4 text-dark" href="{% url 'index' %}"
+						>Amani Blog</a
+					>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-toggle="collapse"
+						data-target="#navbarToggle"
+						aria-controls="navbarToggle"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarToggle">
+						<div class="navbar-nav mr-auto">
+							<a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
+							<a class="nav-item nav-link" href="{% url 'index' %}">About</a>
+						</div>
+						<!-- Navbar Right Side 
+						<div class="navbar-nav">
+							{% if user.is_authenticated %}
+							<a class="nav-item nav-link" href="{% url 'index' %}">New Blog</a>
+							<a class="nav-item nav-link" href="{% url 'index' %}">Profile</a>
+							<a class="nav-item nav-link" href="{% url 'index' %}">Logout</a>
+							{% else %}
+							<a class="nav-item nav-link" href="{% url 'index' %}">Login</a>
+							<a class="nav-item nav-link" href="{% url 'index' %}">Register</a>
+							{% endif %}
+						</div>
+					</div>
+				</div>
+			</nav> -->
+		</header>
 	</body>
 </html>
