--- a/myawards/templates/myawards/project_form.html
+++ b/myawards/templates/myawards/project_form.html
@@ -1,4 +1,7 @@
+<!-- @format -->
+
 {% extends "myawards/base.html" %} {% load crispy_forms_tags %} {% block content %}
+
 <div class="container col-md-3 col-lg-4">
 	<form method="POST" enctype="multipart/form-data">
 		{% csrf_token %}
@@ -9,7 +12,9 @@
 
 		<!-- {{form.as_p}} -->
 		<div class="form-group mx-auto my-3 d-flex justify-content-center">
-			<button class="btn btn-outline-primary mx-auto" type="submit">Post</button>
+			<button class="btn btn-outline-primary mx-auto" type="submit"
+				>Post</button
+			>
 		</div>
 	</form>
 </div>
