Added Sign in, login, and profile pages

--- a/myawards/templates/myawards/auth/profile.html
+++ b/myawards/templates/myawards/auth/profile.html
@@ -1,3 +1,18 @@
 {% extends "myawards/base.html" %} {% block content %}
+<div class="content-section">
+	<div class="container mx-auto d-flex flex-row flex-wrap">
+		<div class="container  mx-auto d-flex justify-content-center my-3">
+			
+			
+			<img
+				width="150"
+				height="150"
+				class="rounded-circle mx-auto"
+				src="http://www.gravatar.com/avatar/?d=mp"
+			/>
+
+			
+          </div>
+</div>
 
 {% endblock content %}
