--- a/myawards/templates/myawards/auth/login.html
+++ b/myawards/templates/myawards/auth/login.html
@@ -1,36 +1,30 @@
-{% extends "myawards/base.html" %} {% block content %}
-div class="container col-md-5 col-lg-4 d-flex flex-column align-items-center">
-<img
-     class="img-fluid w-75 p-3 mx-auto my-2"
-     src="https://freepikpsd.com/file/2019/10/font-instagram-png-5-Transparent-Images.png"
-     width=""
-     alt=""
-     class="d-inline-block align-text-top"
-/>
+<!-- @format -->
 
-<div class="container-fluid d-flex flex-column align-items-center">
-     <div class="btn btn-primary"
-          ><span><i class="bi bi-facebook"></i></span> Login</div
-     >
-     <form method="POST" class="d-flex flex-column align-items-center">
-          {% csrf_token %}
-          <fieldset class="form-group">
-               <legend class="border-bottom mb-4 text-center">Sign in</legend>
-               {{ form | crispy}}
-          </fieldset>
-          <div class="form-group mx-auto my-3">
-               <button class="btn btn-lg btn-block btn-primary" type="submit"
-                    >Log In</button
-               >
-          </div>
-     </form>
-     <div class="border pt-3">
-          <small class="text-muted">
-               Don't have an account?
-               <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
-          </small>
-     </div>
-</div>
+{% extends "myawards/base.html" %}{% load crispy_forms_tags %} {% block content%}
+<div class="container col-md-5 col-lg-4 d-flex flex-column align-items-center">
+	<div class="container-fluid d-flex flex-column align-items-center my-5">
+		<div class="btn btn-primary"
+			><span><i class="bi bi-facebook"></i></span> Login</div
+		>
+		<form method="POST" class="d-flex flex-column align-items-center">
+			{% csrf_token %}
+			<fieldset class="form-group">
+				<legend class="border-bottom mb-4 text-center">Sign in</legend>
+				{{ form | crispy}}
+			</fieldset>
+			<div class="form-group mx-auto my-3">
+				<button class="btn btn-lg btn-block btn-primary" type="submit"
+					>Log In</button
+				>
+			</div>
+		</form>
+		<div class="border pt-3">
+			<small class="text-muted">
+				Don't have an account?
+				<a class="ml-2" href="{% url 'register' %}">Sign Up</a>
+			</small>
+		</div>
+	</div>
 </div>
 
 {% endblock content %}
