--- a/myawards/templates/myawards/auth/signup.html
+++ b/myawards/templates/myawards/auth/signup.html
@@ -1,16 +1,10 @@
 <!-- @format -->
 
-{% extends "myawards/base.html" %} {% block content %}
+{% extends "myawards/base.html" %}{% load crispy_forms_tags %} {% block content %}
 <div
 	class="container col-md-4 col-lg-3 d-flex flex-column justify-items-center"
 >
-	<img
-		class="img-fluid w-75 p-3 mx-auto my-2"
-		src="https://freepikpsd.com/file/2019/10/font-instagram-png-5-Transparent-Images.png"
-		width=""
-		alt=""
-		class="d-inline-block align-text-top"
-	/>
+	<h3 class="fw-bolder text-center">Welcome to Webwwards</h3>
 
 	<div class="container-fluid d-flex flex-column justify-items-center">
 		<div class="btn btn-primary"
