--- a/myawards/templates/myawards/base.html
+++ b/myawards/templates/myawards/base.html
@@ -6,6 +6,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
+			type="image/png"
+			sizes="16x16"
+			rel="icon"
+			href="https://assets.awwwards.com/assets/images/favicon.svg"
+		/>
+		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -17,7 +23,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<title>Document</title>
+		<title>Webwwards</title>
 	</head>
 	<body>
 		{% include 'myawards/navbar.html' %} {% block content %} {% endblock content%}
@@ -39,7 +45,7 @@
 					><a href="#" class="nav-link px-2 text-muted">About</a></li
 				>
 			</ul>
-			<p class="text-center text-muted">© 2021 Company, Inc</p>
+			<p class="text-center text-muted">© 2022 Amani Joseph</p>
 		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
