--- a/myawards/templates/myawards/home.html
+++ b/myawards/templates/myawards/home.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="col-lg-6">
 				<h1 class="display-5 fw-bold lh-1 mb-3"
-					>Wanna chill with the "Big-Devs"</h1
+					>Wanna chill with the "Big-Devs"?</h1
 				>
 				<p class="lead"
 					>Get to share your projects and let your peers review your work. Cant be the best if you are not in it with the best. There are many developers, and designers at different levels of learning and your sharing of your projects will inspire someone else at the end of the day. </p
