--- a/myawards/templates/myawards/auth/signup.html
+++ b/myawards/templates/myawards/auth/signup.html
@@ -4,12 +4,13 @@
 <div
 	class="container col-md-4 col-lg-3 d-flex flex-column justify-items-center"
 >
-	<h3 class="fw-bolder text-center">Welcome to Webwwards</h3>
+<div class="text-center border bg-warning rounded-3 mt-5">
+	<h3 class="fw-bolder  my-3 text-center">Welcome to Webwwards</h3>
+
+</div>	
 
 	<div class="container-fluid d-flex flex-column justify-items-center">
-		<div class="btn btn-primary"
-			><span><i class="bi bi-facebook"></i></span> Login with facebook</div
-		>
+		
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
@@ -18,10 +19,9 @@
 			</fieldset>
 			<div class="form-group container d-flex justify-items-center">
 				<button
-					class="mx-auto px-3 btn btn-block btn-primary mx-auto"
+					class="mx-auto px-3 btn btn-block btn-warning mx-auto"
 					type="submit"
-					>Sign Up</button
-				>
+				>Sign Up</button>
 			</div>
 		</form>
 		<div class="border-top pt-3 text-center">
