--- a/myawards/templates/myawards/home.html
+++ b/myawards/templates/myawards/home.html
@@ -34,10 +34,11 @@
 </header>
 <div class="container-fluid d-flex flex-row flex-wrap justify-content-center">
 	{% for project in projects %}
-	<div class="mx-3 my-3 shadow" style="width: 25em">
-		<h6 class="text-center">{{project.title | capfirst}}</h6>
+	<div class="mx-3 my-3 shadow rounded-3" style="width: 25em">
+		<h6 class="text-center p-2">{{project.title | capfirst}}</h6>
+		
 		<a class="my-2" href="{% url 'post-detail' project.id %}">
-			<img src="{{project.snapshot.url}}" alt="" class="img-fluid" />
+			<img src="{{project.snapshot.url}}" alt="" class="img-fluid h-50 w-100 rounded-3" />
 		</a>
 		<br />
 		<div class="container d-flex justify-content-center p-2">
@@ -56,4 +57,26 @@
 	</div>
 	{% endfor %}
 </div>
+<div class="container d-flex justify-content-center">
+	{% if is_paginated %}
+		{% if page_obj.has_previous %}
+		   <a class="btn btn-outline-warning mb-4" href="?page=1">First</a>
+		   <a class="btn btn-outline-warning mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+		{% endif %}
+	
+		{% for num in page_obj.paginator.page_range %}
+			{% if page_obj.number == num %}
+				<a class="btn btn-warning mb-4" href="?page={{ num }}">{{ num }}</a>
+			{% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+				<a class="btn btn-outline-warning mb-4" href="?page={{ num }}">{{ num }}</a>
+			{% endif %}
+		{% endfor %}
+	
+		{% if page_obj.has_next %}
+			<a class="btn btn-outline-warning mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+			<a class="btn btn-outline-warning mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+		{% endif %}
+	
+	{% endif %}
+	</div>
 {% endblock content %}
