--- a/myawards/templates/myawards/project_detail.html
+++ b/myawards/templates/myawards/project_detail.html
@@ -21,5 +21,10 @@
 		>
 	</div>
 </div>
+<div class="container my-3">
+	<div class="h3">Ratings</div>
+	<label for="customRange3" class="form-label"></label>
+	<input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+</div>
 
 {% endblock content %}
