--- a/myawards/templates/myawards/project_detail.html
+++ b/myawards/templates/myawards/project_detail.html
@@ -21,10 +21,21 @@
 		>
 	</div>
 </div>
-<div class="container my-3">
-	<div class="h3">Ratings</div>
-	<label for="customRange3" class="form-label"></label>
-	<input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+<div class="container my-3 col-6">
+	<div class="h3 text-center">Ratings</div>
+	<div class="container">
+		<label for="customRange3" class="form-label">Design</label>
+		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Design">
+	</div>
+	<div class="container">
+		<label for="customRange3" class="form-label">Usability</label>
+		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Usability">
+	</div>
+	<div class="container">
+		<label for="customRange3" class="form-label">Content</label>
+		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Content">
+	</div>
+
 </div>
 
 {% endblock content %}
