--- a/myawards/templates/myawards/project_detail.html
+++ b/myawards/templates/myawards/project_detail.html
@@ -17,11 +17,14 @@
 			>{{project.technologies}}</div
 		> 
 		<div class="lead text-dark text-center fw-light bg-light m-3 p-1 rounded-3"
-			>Developed by: {{project.developer}}</div
-		>
+			>
+			<span class="lead fw-bold">Developed by:</span>
+			<span class="bg-warning p-2 fw-bolder rounded-3"> {{project.developer}}</span>
+		</div>
 	</div>
 </div>
 <div class="container my-3 col-6">
+	<form action="">
 	<div class="h3 text-center">Ratings</div>
 	<div class="container">
 		<label for="customRange3" class="form-label">Design</label>
@@ -35,6 +38,11 @@
 		<label for="customRange3" class="form-label">Content</label>
 		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Content">
 	</div>
+	<div class="form-group mx-auto my-3 d-flex justify-content-center">
+		<button class="btn  btn-lg btn-block btn-warning fw-bold" type="submit">Rate Project</button
+		>
+	</div>
+	</form>
 
 </div>
 
