--- a/myawards/templates/myawards/project_detail.html
+++ b/myawards/templates/myawards/project_detail.html
@@ -8,33 +8,34 @@
 		<br />
 		<div class="container d-flex justify-content-center p-2">
 			<a class="my-3 mx-auto text-center text-light" href="{{project.url}}">
-				<button class="text-muted btn btn-info">More details</button>
+				<button class="text-muted btn btn-warning">Visit website</button>
 			</a>
 		</div>
 
-		<div class="text-muted my-2 p-2">{{project.description}}</div>
-		 <div class="text-muted text-center fw-light bg-info m-3 p-1 rounded-3"
-			>{{project.technologies}}</div
+		<div class="text-muted container my-2 p-2">{{project.description}}</div>
+		 <div class="text-muted text-center fw-light bg-warning m-3 p-1 rounded-3"
+			>{{project.technologies| upper}}</div
 		> 
 		<div class="lead text-dark text-center fw-light bg-light m-3 p-1 rounded-3"
 			>
 			<span class="lead fw-bold">Developed by:</span>
-			<span class="bg-warning p-2 fw-bolder rounded-3"> {{project.developer}}</span>
+			<span class="h3 text-warning p-2 fw-bolder rounded-3"> {{project.developer| title}}</span>
 		</div>
 	</div>
 </div>
 <div class="container my-3 col-6">
-	<form action="">
+	<form  action="">
+		{% csrf_token %}
 	<div class="h3 text-center">Ratings</div>
-	<div class="container">
+	<div class="container shadow-2 my-1 border-bottom border-warning">
 		<label for="customRange3" class="form-label">Design</label>
 		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Design">
 	</div>
-	<div class="container">
+	<div class="container shadow-2 my-1 border-bottom border-warning">
 		<label for="customRange3" class="form-label">Usability</label>
 		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Usability">
 	</div>
-	<div class="container">
+	<div class="container shadow-2 my-1 border-bottom border-warning">
 		<label for="customRange3" class="form-label">Content</label>
 		<input type="range" class="form-range" min="0" max="10" step="0.5" id="Content">
 	</div>
