--- a/myawards/templates/myawards/home.html
+++ b/myawards/templates/myawards/home.html
@@ -43,7 +43,7 @@
 		<br />
 		<div class="container d-flex justify-content-center p-2">
 			<a class="my-3 mx-auto text-center text-light" href="{{project.url}}">
-				<button class="text-muted btn btn-info">More details</button>
+				<button class="text-muted btn btn-warning">Visit site</button>
 			</a>
 		</div>
 
